fixed button display (z-index)

--- a/src/assets/web/widgets.less
+++ b/src/assets/web/widgets.less
@@ -11,10 +11,14 @@
   .hrzg-widget-widget-controls {
     opacity: 0;
     position: absolute;
+    z-index: 1200;
   }
 
   .hrzg-widget-container-controls {
     opacity: 0;
+    position: absolute;
+    right: 0;
+    z-index: 1200;
   }
 
   .hrzg-widget-widget {
